<pre>
2007-xx-xx:
	* version 0.6
	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
	* IMPORTANT! options are no longer automatically stored - use the
	  ~/.vimperatorrc file instead for persistent options
	* IMPORTANT! Major hints rewrite
	  read up the new help for the f, F and ; commands for details
	  removed the following hint options: 'hintchars'
	  added the following hint options: 'hinttimeout'
	* you can edit textfields with Ctrl-i now using an external editor (thanks to Joseph Xu)
	* :open, :bmarks, etc. filter on space separated tokens now, so you can
	  search with :open linux windows &lt;tab&gt; all your bookmarks/history
	  which contain linux AND windows in the url or title
	* tags and keyword support for :bmark
	* added full zoom, and changed keybindings slightly for text zoom
	* improvements for scrollable -- more -- prompt
	* changed 'I' key to Ctrl-Q to also work in textboxes
	* sites like msn.com or yahoo.com don't focus search field anymore on keydown
	* new gi browser command to focus last used input box
	* edit TEXTAREAs with many vim commands in a vim and even visual mode if you :set noinsertmode
	* support for emacs/bash-like ctrl-e/a/u/k/h keys in single line text fields
	* support for * and # mappings to search for the text selection or the text under the cursor
	* Escape finally clears any selection made in the document
	* initial start of caret mode. Start with 'i', stop with Escape;
	* many small bug fixes and enhancments

2007-10-11:
	* version 0.5.2
	* changed semantics of :set[!] and :prefs[!] a little, :set shows now all non-default
	  options, use :prefs! to get the about:config window
	* added "s" and "a" mappings to extended hints mode for saving hint targets
	* "d", "D" and :bdelete support count now
	* :back/:forward can use tabcompletion
	* :undoall support, and tabcompletion for :undo <tab>
	* new :redraw and Ctrl-L commands for forced redrawing of the screen
	* added new 'laststatus' option and removed "s" value from 'guioptions'