@@ -37,7 +37,6 @@ vimperator.CommandLine = function() //{{{
     ////////////////////////////////////////////////////////////////////////////////
     ////////////////////// PRIVATE SECTION /////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////{{{
-
     const UNINITIALIZED = -2; // notifies us, if we need to start history/tab-completion from the beginning
 
     var completionlist = new vimperator.InformationList("vimperator-completion", { min_items: 2, max_items: 10 });
